--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: scala
 scala:
 - 2.10.3
 sudo: false
+install:
+- git clone https://github.com/sstephenson/rbenv.git rbenv
+- export PATH="`pwd`/rbenv/bin:$PATH"
 script: ./dist-root-tc
 after_script: ls -la
