--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ install:
 - git clone https://github.com/sstephenson/ruby-build.git rbenv/plugins/ruby-build
 - export PATH="`pwd`/rbenv/bin:`pwd`/rbenv/plugins/ruby-build/bin:$PATH"
 - export TZ='Europe/London'
+- export BUILD_NUMBER=$TRAVIS_BUILD_NUMBER
+- export BUILD_VCS_NUMBER=$TRAVIS_COMMIT
 script: ./dist-root-tc
 after_script: ls -la
 cache:
